--- a/proposal_EDA.ipynb
+++ b/proposal_EDA.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-04T14:52:13.478525Z",
-     "start_time": "2019-11-04T14:52:12.866786Z"
+     "end_time": "2019-11-04T20:33:51.684096Z",
+     "start_time": "2019-11-04T20:33:51.214755Z"
     }
    },
    "outputs": [],
@@ -20,8 +20,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-04T14:52:13.745804Z",
-     "start_time": "2019-11-04T14:52:13.480438Z"
+     "end_time": "2019-11-04T20:33:51.942315Z",
+     "start_time": "2019-11-04T20:33:51.686055Z"
     }
    },
    "outputs": [],
@@ -38,8 +38,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-04T14:52:13.756535Z",
-     "start_time": "2019-11-04T14:52:13.748530Z"
+     "end_time": "2019-11-04T20:33:51.951959Z",
+     "start_time": "2019-11-04T20:33:51.944618Z"
     }
    },
    "outputs": [
@@ -72,8 +72,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-04T14:52:13.762046Z",
-     "start_time": "2019-11-04T14:52:13.758725Z"
+     "end_time": "2019-11-04T20:33:51.957197Z",
+     "start_time": "2019-11-04T20:33:51.953927Z"
     },
     "hidden": true
    },
@@ -95,8 +95,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-04T14:52:13.766752Z",
-     "start_time": "2019-11-04T14:52:13.763871Z"
+     "end_time": "2019-11-04T20:33:51.962055Z",
+     "start_time": "2019-11-04T20:33:51.959124Z"
     },
     "hidden": true
    },
@@ -132,11 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-04T14:52:16.564064Z",
-     "start_time": "2019-11-04T14:52:13.768857Z"
+     "end_time": "2019-11-04T20:43:36.678228Z",
+     "start_time": "2019-11-04T20:43:33.405891Z"
     },
     "scrolled": true
    },
@@ -152,7 +152,8 @@
       "  faith & hope 88\n",
       "  hope & love 520\n",
       "  faith & love 101\n",
-      "  faith, hope and love 56\n"
+      "  faith, hope & love 56\n",
+      "  faith or hope or love 1712\n"
      ]
     }
    ],
@@ -164,7 +165,8 @@
     "print('  faith & hope',t_df[t_df['transcript'].str.contains('faith',case=False) & t_df['transcript'].str.contains('hope',case=False)].shape[0])\n",
     "print('  hope & love', t_df[t_df['transcript'].str.contains('hope',case=False)  & t_df['transcript'].str.contains('love',case=False)].shape[0])\n",
     "print('  faith & love',t_df[t_df['transcript'].str.contains('faith',case=False) & t_df['transcript'].str.contains('love',case=False)].shape[0])\n",
-    "print('  faith, hope and love',t_df[t_df['transcript'].str.contains('faith',case=False) & t_df['transcript'].str.contains('hope',case=False) & t_df['transcript'].str.contains('love',case=False)].shape[0])"
+    "print('  faith, hope & love',t_df[t_df['transcript'].str.contains('faith',case=False) & t_df['transcript'].str.contains('hope',case=False) & t_df['transcript'].str.contains('love',case=False)].shape[0])\n",
+    "print('  faith or hope or love',t_df[t_df['transcript'].str.contains('faith',case=False) | t_df['transcript'].str.contains('hope',case=False) | t_df['transcript'].str.contains('love',case=False)].shape[0])"
    ]
   },
   {
@@ -179,8 +181,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-04T14:52:16.704817Z",
-     "start_time": "2019-11-04T14:52:16.566015Z"
+     "end_time": "2019-11-04T20:33:55.462170Z",
+     "start_time": "2019-11-04T20:33:55.328470Z"
     }
    },
    "outputs": [
@@ -222,8 +224,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-04T14:52:16.729425Z",
-     "start_time": "2019-11-04T14:52:16.707902Z"
+     "end_time": "2019-11-04T20:33:55.485052Z",
+     "start_time": "2019-11-04T20:33:55.465008Z"
     },
     "scrolled": true
    },
