Fixed sentence separation, glove (et.al.) vs love. pickle love_snippets, 4D visualization

--- a/love_not_glove.ipynb
+++ b/love_not_glove.ipynb
@@ -16,8 +16,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-12T00:55:43.534192Z",
-     "start_time": "2019-11-12T00:55:42.355779Z"
+     "end_time": "2019-11-13T23:39:05.166353Z",
+     "start_time": "2019-11-13T23:39:04.000321Z"
     }
    },
    "outputs": [],
@@ -30,7 +30,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I ended up implementing the regex in the variable named 'love' below rather than in the function get_sents.  However, before that I was modifying get_sents for which the following lines were helpful."
+    "I ended up implementing the regex in the variable named 'love' below rather than in the function get_sents."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SPD NOTE: A couple days later I realized I DID need to fix the get_sents file ALSO with the same solution.  The work in this file eliminated getting talks that contained the wrong words.  The get_sents function needed to be fixed also so I didn't get the sentences containing the wrong words."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anyway, I was modifying get_sents for which the following lines were helpful:"
    ]
   },
   {
@@ -38,8 +52,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-12T00:55:43.578786Z",
-     "start_time": "2019-11-12T00:55:43.537210Z"
+     "end_time": "2019-11-13T23:39:05.211802Z",
+     "start_time": "2019-11-13T23:39:05.169484Z"
     }
    },
    "outputs": [],
@@ -53,8 +67,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-12T00:55:52.213021Z",
-     "start_time": "2019-11-12T00:55:43.581533Z"
+     "end_time": "2019-11-13T23:39:14.052433Z",
+     "start_time": "2019-11-13T23:39:05.214579Z"
     }
    },
    "outputs": [],
@@ -80,8 +94,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-12T00:55:52.255535Z",
-     "start_time": "2019-11-12T00:55:52.215224Z"
+     "end_time": "2019-11-13T23:39:14.097723Z",
+     "start_time": "2019-11-13T23:39:14.054582Z"
     }
    },
    "outputs": [
@@ -105,8 +119,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-12T00:55:52.291494Z",
-     "start_time": "2019-11-12T00:55:52.257318Z"
+     "end_time": "2019-11-13T23:39:14.135816Z",
+     "start_time": "2019-11-13T23:39:14.099645Z"
     }
    },
    "outputs": [
@@ -138,8 +152,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-12T00:55:52.336644Z",
-     "start_time": "2019-11-12T00:55:52.293404Z"
+     "end_time": "2019-11-13T23:39:14.175360Z",
+     "start_time": "2019-11-13T23:39:14.137680Z"
     }
    },
    "outputs": [
@@ -163,6 +177,13 @@
    "metadata": {},
    "source": [
     "Success!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOT SO FAST!  See the file `fix_run_tegether_sents.ipynb` for further improving the love_snippets data."
    ]
   },
   {
