--- a/fix_run_together_sents.ipynb
+++ b/fix_run_together_sents.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:09:13.608939Z",
-     "start_time": "2019-11-13T23:09:12.144453Z"
+     "end_time": "2019-11-15T00:16:50.285298Z",
+     "start_time": "2019-11-15T00:16:49.157634Z"
     }
    },
    "outputs": [],
@@ -21,8 +21,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:00:53.136418Z",
-     "start_time": "2019-11-13T23:00:44.302055Z"
+     "end_time": "2019-11-15T00:16:59.625522Z",
+     "start_time": "2019-11-15T00:16:50.288368Z"
     }
    },
    "outputs": [],
@@ -43,9 +43,10 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:00:54.023718Z",
-     "start_time": "2019-11-13T23:00:54.014591Z"
-    }
+     "end_time": "2019-11-15T00:16:59.640361Z",
+     "start_time": "2019-11-15T00:16:59.628340Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -72,8 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-15T00:16:59.647752Z",
+     "start_time": "2019-11-15T00:16:59.643780Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def sent_simple(text):\n",
@@ -88,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:01:05.635674Z",
-     "start_time": "2019-11-13T23:01:05.631155Z"
+     "end_time": "2019-11-15T00:16:59.654016Z",
+     "start_time": "2019-11-15T00:16:59.649573Z"
     }
    },
    "outputs": [
@@ -102,7 +108,7 @@
        "'abc A'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:01:06.728945Z",
-     "start_time": "2019-11-13T23:01:06.724954Z"
+     "end_time": "2019-11-15T00:16:59.660138Z",
+     "start_time": "2019-11-15T00:16:59.656041Z"
     }
    },
    "outputs": [
@@ -127,7 +133,7 @@
        "'abc. A'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:01:08.214300Z",
-     "start_time": "2019-11-13T23:01:08.196493Z"
+     "end_time": "2019-11-15T00:16:59.681919Z",
+     "start_time": "2019-11-15T00:16:59.662434Z"
     }
    },
    "outputs": [
@@ -152,7 +158,7 @@
        "\"We love eye-popping color, and we try to bring this eye-popping color underwater with us. So there's been a long and sordid history of bringing color underwater, and it starts 88 years ago with Bill Longley and Charles Martin, who were trying to take the first underwater color photograph.\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,11 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:09:27.531732Z",
-     "start_time": "2019-11-13T23:09:17.808460Z"
+     "end_time": "2019-11-15T00:17:09.538039Z",
+     "start_time": "2019-11-15T00:16:59.687076Z"
     }
    },
    "outputs": [],
@@ -186,12 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:09:28.856046Z",
-     "start_time": "2019-11-13T23:09:28.847095Z"
-    }
+     "end_time": "2019-11-15T00:17:09.545993Z",
+     "start_time": "2019-11-15T00:17:09.540253Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -200,7 +207,7 @@
        "'We love eye-popping color, and we try to bring this eye-popping color underwater with us.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:11:49.938597Z",
-     "start_time": "2019-11-13T23:11:49.891278Z"
+     "end_time": "2019-11-15T00:17:09.795329Z",
+     "start_time": "2019-11-15T00:17:09.548787Z"
     }
    },
    "outputs": [],
@@ -232,11 +239,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:13:20.076818Z",
-     "start_time": "2019-11-13T23:13:20.054909Z"
+     "end_time": "2019-11-15T00:17:09.821675Z",
+     "start_time": "2019-11-15T00:17:09.797019Z"
     }
    },
    "outputs": [],
@@ -256,8 +263,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-13T23:14:21.041475Z",
-     "start_time": "2019-11-13T23:14:21.029285Z"
+     "end_time": "2019-11-15T00:17:09.839049Z",
+     "start_time": "2019-11-15T00:17:09.823989Z"
     },
     "scrolled": true
    },
@@ -267,6 +274,7 @@
       "text/plain": [
        "transcript      True\n",
        "url             True\n",
+       "sentences       True\n",
        "n_love_sents    True\n",
        "love            True\n",
        "dtype: bool"
