Documentation added. Repo Organized - pass 1.

--- a/models/cv_binary-lsa.ipynb
+++ b/models/cv_binary-lsa.ipynb
@@ -373,6 +373,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frequency of Use of Love"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -380,7 +387,7 @@
      "end_time": "2019-11-17T06:00:44.051585Z",
      "start_time": "2019-11-17T06:00:43.785318Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
